plugins {
    id 'application'
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.openjfx:javafx-controls:21'
    implementation 'org.openjfx:javafx-fxml:21'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
}

application {
    mainClass = 'com.example.conwayslife.Main'
    applicationDefaultJvmArgs = [
        '--module-path', '/Users/pmcgee/_dev/javafx-sdk-21.0.7/lib',
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.named('compileJava') {
    options.compilerArgs = [
        '--module-path', '/Users/pmcgee/_dev/javafx-sdk-21.0.7/lib',
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}